objects/ssot__DeviceApplicationEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionCadenceStepId__c</fullName>
        <label>Action Cadence Step</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceAppEventTypeId__c</fullName>
        <label>Device App Event Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCountryId__c</fullName>
        <label>Device Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceIPAddress__c</fullName>
        <label>Device IP Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceId__c</fullName>
        <label>Device</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLatitude__c</fullName>
        <label>Device Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLocaleId__c</fullName>
        <label>Device Locale</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLongitude__c</fullName>
        <label>Device Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DevicePostalCode__c</fullName>
        <label>Device Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAssetId__c</fullName>
        <label>Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelActionId__c</fullName>
        <label>Engagement Channel Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementDateTm__c</fullName>
        <label>Engagement Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementEventDirectionId__c</fullName>
        <label>Engagement Event Direction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNbr__c</fullName>
        <label>Engagement Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementNotesTxt__c</fullName>
        <label>Engagement Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationId__c</fullName>
        <label>Engagement Publication</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTypeId__c</fullName>
        <label>Engagement Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementVehicleId__c</fullName>
        <label>Engagement Vehicle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeofenceName__c</fullName>
        <label>Geofence Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Device Application Engagement Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalEngagementActorId__c</fullName>
        <label>Internal Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTestSend__c</fullName>
        <label>Is Test Send</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadlId__c</fullName>
        <label>Lead</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LinkURL__c</fullName>
        <label>Link URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivityId__c</fullName>
        <label>Market Journey Activity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingEmailListId__c</fullName>
        <label>Marketing Email List</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerURL__c</fullName>
        <label>Referrer URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Referrer__c</fullName>
        <label>Referrer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScreenName__c</fullName>
        <label>Screen Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SdkVersionNbr__c</fullName>
        <label>SDK Version Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentDateTm__c</fullName>
        <label>Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SessionId__c</fullName>
        <label>Session</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShoppingCartId__c</fullName>
        <label>Shopping Cart</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplicationId__c</fullName>
        <label>Software Application</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetEngagementActorId__c</fullName>
        <label>Target Engagement Actor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskId__c</fullName>
        <label>Task</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeInAppSecondsCt__c</fullName>
        <label>Time In App Seconds Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WebCookieId__c</fullName>
        <label>Web Cookie</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkflowId__c</fullName>
        <label>Workflow</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149811_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_DeviceApplicat_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_DeviceApplicat_rel</relationshipLabel>
        <relationshipName>rel_1697761149811_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156274_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_Id_map_DeviceApplicationEngagem_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>Case_Id_map_DeviceApplicationEngagem_rel</relationshipLabel>
        <relationshipName>rel_1697761156274_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761158363_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointAddress_Id_map_DeviceApp_rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>ContactPointAddress_Id_map_DeviceApp_rel</relationshipLabel>
        <relationshipName>rel_1697761158363_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>